compiler/testData/diagnostics/tests/valueParameterWithoutExplicitType.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
fun foo(
    <!VALUE_PARAMETER_WITHOUT_EXPLICIT_TYPE!>x<!>
) {}